mobile view cards alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -27,4 +27,5 @@
   margin: 0 auto;
   margin-top: 2em;
   justify-content: center;
+  align-content: center;
 }
